# rl-tut

./: README.md  main.py  pyproject.toml
PPO (Proximal Policy Optimization)/: chat_gpt.md  ppo_advertisement_example.ipynb
tf/bandit/: All_Policy_Summary.md  All_TF_Policy_Summary(Research_Mode).md  maths_behind_policy.md  reward_prediction_policy_ads_example.ipynb
tf/rl/: A2C.md  Behavioral Cloning (BC) vs DAgger.md  BehavioralCloning.md  Bellman Equation.md  CQL(Conservative Q Learning).md  Categorical DQN.md  Compare PPO vs TRPO vs A2C.md  Compare TD3 vs DDPG vs SAC.md  DAgger.md  DDPG (Deep Deterministic Policy Gradient).md  Difference between Categorical DQN (C51) and QR-DQN (quantile regression).md  PPO.md  SAC uses Gaussian + tanh for continuous actions.md  Soft Actor-Critic (SAC).md  TD3(Twin Delayed Deep Deterministic).md  TRPO vs PPO (math-level comparison).md  TRPO.md  Visual explanation of TRPO KL constraint.md  dqn.md
