[project]
name = "rl-tut"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "jupyter>=1.1.1",
    "matplotlib>=3.9.0",
    "numpy>=1.26.0,<2.0",
    "tensorflow>=2.15.0,<2.18",
    "tensorflow-probability>=0.23.0,<0.24",
    "tf-agents>=0.19.0",
    "pygame>=2.5.0",
    "tf-keras>=2.17.0",
]

[tool.uv]
override-dependencies = [
    "pygame>=2.5.0",
    "typing-extensions>=4.12.0",
]
